@@ -1,5 +1,8 @@
 2010-04-28  Glenn Morris  <rgm@gnu.org>
 
+	* Makefile.in (FONT_OBJ): New, set by configure.
+	(FONT_DRIVERS): Use $FONT_OBJ.
+
 	* Makefile.in (LIBXMU): Set with configure, not cpp.
 	* s/aix4-2.h (LIBXMU):
 	* s/hpux10-20.h (LIBXMU):
